added a media query to handle resizing in mobile views

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 }
 body{
 	background-color: #3b3b3b;
+	width: 100%;
+	padding: 0px 30px;
 }
 
 .main-cont{
@@ -18,7 +20,7 @@ body{
 	border-radius: 10px;
 }
 .main-cont > *{
-
+	padding: 0px 20px;
 	margin-bottom: 25px;
 }
 .upper-text{
@@ -33,13 +35,14 @@ body{
 }
 .form{
 	position: relative;
+	width: 100%;
 }
 input{
 	border: 1px solid #cccccc;
 	background-color: #3b3b3b;
 	outline: none;
 	height: 55px;
-	width: 400px;
+	width: 100%;
 	padding-left: 20px;
 	border-radius: 5px;
 	margin-bottom: 10px;
@@ -56,7 +59,7 @@ input:focus + label{
 	background-color: #3b3b3b;
 	padding: 0;
 	left: 19px;
-	padding: 0 4px;
+	padding: 0 10px;
 	font-size: 0.8em;
 	transition: 0.15s ease-in-out;
 }
@@ -67,7 +70,7 @@ input:valid + label{
 	background-color: #3b3b3b;
 	padding: 0;
 	left: 19px;
-	padding: 0 4px;
+	padding: 0 10px;
 	font-size: 0.8em;
 	transition: 0.15s ease-in-out;
 }
@@ -75,11 +78,12 @@ input:valid + label{
 
 label{
 	position: absolute;
+	margin-left: 10px;
 	color: #7a7a7a;
-	left: 0px;
+	left: 20px;
 	top: 20px;
 	pointer-events: none;
-	padding-left: 20px;
+	padding: 0px 10px;
 }
 .btn{
 	display: flex;
@@ -115,4 +119,10 @@ a{
 }
 .main-cont p{
 	color: white;
+}
+
+@media screen and (max-width: 700px){
+	.main-cont{
+		width: 100%;
+	}
 }
